# dn-ridesharing

./: .gitignore  README.md  Snakefile  analyze_results.py  compute-ate.py  config.csv  plot.R  plot.py  pyproject.toml  results.csv  rideshare-incremental.py  rideshare.py
.snakemake/metadata/: b3V0cHV0L2F0ZS5jc3Y=
analysis-backup/: summary.csv
output/: ate.csv  ats.csv
output/switch=120/: config.csv  results.csv
output/switch=1200/: config.csv  results.csv
output/switch=1800/: config.csv  results.csv
output/switch=300/: config.csv  results.csv
output/switch=3600/: config.csv  results.csv
output/switch=600/: config.csv  results.csv
output/switch=900/: config.csv  results.csv
picard/: rideshare_dispatch.py
